@@ -55,7 +55,7 @@ G_BEGIN_DECLS
 #define NA_IS_TRACKER_CLASS( klass )	( G_TYPE_CHECK_CLASS_TYPE(( klass ), NA_TRACKER_TYPE ))
 #define NA_TRACKER_GET_CLASS( object )	( G_TYPE_INSTANCE_GET_CLASS(( object ), NA_TRACKER_TYPE, NATrackerClass ))
 
-typedef struct NATrackerPrivate NATrackerPrivate;
+typedef struct NATrackerPrivate      NATrackerPrivate;
 
 typedef struct
 {
