@@ -1,5 +1,6 @@
 2009-02-15 Pierre Wieser <pwieser@trychlos.org>
 
+	Update src/plugin-tracker.
 	Update src/plugin-menu.
 
 	Define NAIImporter interface.
